[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/entities/BattleMinerBot.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/components/GUIManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/world/Terrain.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/world/DropPod.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/entities/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/components/Cursor.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/world/BulletManager.gd" type="Script" id=7]
[ext_resource path="res://scripts/world/PlayerManager.gd" type="Script" id=8]

[node name="Gameplay" type="Node2D"]

[node name="GUIManager" parent="." instance=ExtResource( 2 )]

[node name="Terrain" parent="." instance=ExtResource( 3 )]

[node name="PlayerManager" type="Node2D" parent="." groups=["player_manager"]]
script = ExtResource( 8 )

[node name="SpawnPoint" type="Node2D" parent="PlayerManager"]
position = Vector2( 60, 99 )

[node name="Player" parent="PlayerManager" instance=ExtResource( 5 )]
position = Vector2( 102, 116 )

[node name="Camera2D" type="Camera2D" parent="PlayerManager/Player" groups=["main_camera"]]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true

[node name="BattleMinerBot" parent="PlayerManager" instance=ExtResource( 1 )]
position = Vector2( -74, 132 )

[node name="BulletManager" type="Node2D" parent="." groups=["bullet_manager"]]
script = ExtResource( 7 )

[node name="Cursor" parent="." instance=ExtResource( 6 )]
pause_mode = 2

[node name="Particles" type="Node2D" parent="." groups=["particle_container"]]

[node name="DropPod" parent="." instance=ExtResource( 4 )]
position = Vector2( 60, 99 )

[connection signal="menu_toggled" from="GUIManager" to="Cursor" method="_on_GUIManager_menu_toggled"]
[connection signal="crystal_amount_changed" from="PlayerManager/Player" to="GUIManager" method="_on_Player_crystal_amount_changed"]
[connection signal="menu_toggled" from="DropPod" to="GUIManager" method="_on_DropPod_menu_toggled"]
